infra/manifests/start-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: start-page
  namespace: start-page
spec:
  selector:
    app: start-page
  ports:
    - port: 80
      targetPort: 80
