infra/manifests/start-page/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: start-page
  namespace: start-page
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames:
    - "start.brandwhisper.cloud"
  rules:
    - backendRefs:
        - name: start-page
          port: 80
